refactor: upgrade versions and migrate to pnpm

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -7,7 +7,7 @@ const pages = {
 };
 ---
 
-<nav class="flex justify-aroud mt-4">
+<nav class="flex justify-around mt-4">
   {
     Object.keys(pages)
       .filter((key) => key !== currentPage)
