--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -6,7 +6,11 @@ import Tool from "../components/tool.astro";
 
 <Layout>
   <h1>Tools I use</h1>
-  <p></p>
+  <p class="main-content">
+    Here are some of the tools I use both professionally and personally. These
+    resources help streamline my workflow and enhance my coding experience
+    across various projects.
+  </p>
   <h2>Languages</h2>
   <div class="flex flex-row gap-1">
     <Tool
