refactor: update content in index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,20 +6,18 @@ import Layout from "../layouts/Layout.astro";
 <Layout>
   <h1>Hi there, I'm tea&nbsp👋</h1>
   <p class="main-content">
-    Hey, I'm tea, a professional programmer and a computer science student at
-    FOM University in Germany 🇩🇪. I started out as an aspiring developer and now
-    get to turn my passion for coding into both work and study. I love building
-    things in Python and creating cross-platform apps with Dart and Flutter. I'm
-    a big fan of open source, and I enjoy contributing to projects that I find
-    interesting or that challenge me in new ways.
+    Hey, I'm tea, a professional software developer and a computer science
+    student at <a href="https://www.fom.de/">FOM University</a> in Germany 🇩🇪. I
+    love building things in Python and creating cross-platform apps with Dart and
+    Flutter. I'm a big fan of open source, and I enjoy contributing to projects that
+    I find interesting or that challenge me in new ways.
   </p>
 
   <p class="main-content">
     I really enjoy working with APIs and figuring out how to make different
     systems talk to each other. Whether it's building bots, automating tasks, or
     creating tools to improve workflows, I like experimenting with frameworks
-    and writing my own (meta-)frameworks to make things more efficient and fun
-    to use.
+    and writing my own to make things more efficient and fun to use.
   </p>
 
   <p class="main-content">
