--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout>
   <h1>Hi there, I'm tea&nbsp👋</h1>
   <p class="main-content">
-    Hey, I'm tea, a professional software developer and a computer science
+    Hey, I'm tea, a software developer and a computer science
     student at <a href="https://www.fom.de/">FOM University</a> in Germany 🇩🇪. I
     love building things in Python and creating cross-platform apps with Dart and
     Flutter. I'm a big fan of open source, and I enjoy contributing to projects that
@@ -14,10 +14,10 @@ import Layout from "../layouts/Layout.astro";
   </p>
 
   <p class="main-content">
-    I really enjoy working with APIs and figuring out how to make different
-    systems talk to each other. Whether it's building bots, automating tasks, or
-    creating tools to improve workflows, I like experimenting with frameworks
-    and writing my own to make things more efficient and fun to use.
+    I really enjoy working with APIs and figuring out how different
+    systems work together. Whether it's building bots, automating tasks, or
+    creating tools to improve workflows, I like tinkering with frameworks
+    and writing my own to make things more efficient and easy to use.
   </p>
 
   <p class="main-content">
@@ -27,8 +27,8 @@ import Layout from "../layouts/Layout.astro";
   </p>
 
   <p class="main-content">
-    If you'd like to get in touch, the best way is through Discord — I'm always
-    active there, so you're most likely to catch me quickly. You can also reach
+    If you'd like to get in touch, the best way is through Discord — 
+    you're most likely to catch me quickly there. You can also reach
     me by email, but I might miss it, so don't hesitate to follow up if I don't
     respond right away. If you're on Keybase, feel free to message me there too
     (see links below)!
